Netdiscover 0.8.1 - 01 Nov. 2021
   * Migrated README to README.md.
   * Replaced deprecated function pcap_lookupdev() with pcap_findalldevs().
     Thanks to bcoles <bcoles@gmail.com>.
   * Updated manpage version and date.
   * Updated OUI table.
   * Using version set in configure.ac for src/main.c.

Netdiscover 0.8 - 11 Jul. 2021
   * Changed PCAP_TOUT from 0 to 512 in src/ifaces.h, to avoid no results when
     scanning with CIDR /24 if netdiscover is being built with libpcap >= 1.10.
     Thanks to Enrico Schmitz.
   * Updated manpage date and version.
   * Updated OUI table.

Netdiscover 0.7 - 29 Jun. 2020
   * Updated create-man.sh to 2.0 version.
   * Updated manpage date.
   * Updated update-oui-database.sh to be useful in macOS.
   * Updated OUI table.

Netdiscover 0.6 - 17 Apr. 2020
   * Added a CI test to be run by GitHub. (Eriberto)
   * Fix build with GCC 10. (Jaime Peñalba)
   * Updated OUI table. (Eriberto)

Netdiscover 0.5.1 - 07 Feb. 2019
   * Added an official repository notice in README.
   * Added dates of releases in ChangeLog.
   * Added some copyright notices.
   * Several important fixes and improvements in manpage and help page.
   * Updated OUI table (1 change since yesterday).

Netdiscover 0.5 - 06 Feb. 2019
   * Added some missing entries in last changelog (0.4).
   * Fixed the following warning from GCC: "warning: ignoring return value
     of system, declared with attribute warn_unused_result".
   * Full updated the manpage and help page. Added missing options, examples,
     etc.
   * Removed INSTALL file. This file must be created by autotools when in
     build process to always provide updated instructions.
   * Removed Usage and Examples sections from README file. It will make easier
     the maintenance. All information are in help and manpage.
   * Updated checklist to release a new version.
   * Updated OUI table (5 new changes since yesterday).
   * Using txt2man to generate the manpage.

Netdiscover 0.4 - 06 Feb. 2019